Dark mode position fixed

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body {
 }
 
 .logo-container >img {
-	height: 1.4em;
+	height: 1.6em;
 	padding:3px;
 	filter: var(--makeInvert);
 }
@@ -687,7 +687,7 @@ hr {
         letter-spacing: 0.3px;
     }
 	.name{
-		font-size:3.8vw;
+		font-size:4.4vw;
 		font-weight: bolder;
 
 	}
@@ -745,7 +745,7 @@ hr {
         background-color: hsla(251, 82%, 31%, 0.13);
 		backdrop-filter: blur(1rem);
         width:100%;
-		height: 8vh;
+		height: 6.5vh;
         padding:1vw 1vw 1vw 1vw ;
         position:absolute;
         z-index: 9;
@@ -787,7 +787,7 @@ hr {
     .navigation-main{
 		
         position: absolute;
-		top: 6vh;
+		top: 6.5vh;
 		left:-2vh;
 		transform: translateX(-65vw);
 		transition: transform 350ms ease-in;
@@ -801,13 +801,11 @@ hr {
 
 	.navigation ul{
 		width:60vw;		
-		height: 92vh;
+		height: 93.5vh;
 		padding-top: 23vh;
 		padding-left: 3vh;
 		background-color: hsla(210, 28%, 25%, 0.8);
 		backdrop-filter: blur(3rem);
-		position: fixed;
-		top:2vh;
 	}
 	.navigation ul li{
 		display: block;
@@ -833,7 +831,7 @@ hr {
 
         outline: var(--navText);
         position : fixed;
-        top:0vw;
+        top:1.5vw;
         right:4vw;
 		z-index: 345;
 		height: 4.5vw;
@@ -874,7 +872,7 @@ hr {
 		background-size: cover;
 		width: 5vw;
 		aspect-ratio: 1/1;
-		margin:0.5vw 0vw 0.5vw 2vw;
+		margin:0.5vw 0vw 0.5vw 4vw;
 		filter:var(--makeInvert);
 	}
 	.mobile-nav-toggle[aria-expanded='true']{
